src/test/deca/context/invalid/testNotWrongType.deca
// Description : opérateur ! avec mauvais types
{
    int x;
    if (!x) {
        x = x - 1;
    }
}
